--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -129,16 +129,18 @@
 
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+    \textsc{Sept. 2023} & Lingyan Gold Medal, University of Chinese Academy of Sciences \\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Mar. 2020} & Kavli Visiting Fellow, Peking University \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2019} & UCLA Physics and Astronomy Commencement Speaker  \\
     \multicolumn{2}{c}{} \\[\narrow]
-%    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
+    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
+    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
 %    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
-    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
+%    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2018} & UCLA Dissertation Year Fellowship (\$47k: stipend+tuition)    \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{May 2018} & Rudnick-Abelmann Fellowship, UCLA (\$2k)      \\
@@ -153,9 +155,9 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
-%    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
-%                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
-%    \multicolumn{2}{c}{} \\[\narrow]
+    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
+                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
@@ -171,14 +173,17 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
+    \textsc{Jun. 2024}   &   \textbf{Invited Talk}, @ \href{https://cosparhq.cnes.fr/events/cospar-capacity-building-workshops/}{COSPAR/IAU Workshop on JWST}, Chiangmai, Thailand \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Jan. 2023}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2022}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2022}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas239}{AAS 239}, Salt Lake City\\
-    \multicolumn{2}{c}{} \\
+%    \textsc{Jan. 2022}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas239}{AAS 239}, Salt Lake City\\
+%    \multicolumn{2}{c}{} \\
 
     \textsc{Jan. 2021}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas237}{AAS 237}, virtual    \\
     \multicolumn{2}{c}{} \\
@@ -315,6 +320,8 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
+    \item[17] JWST-GO-03050, PI Goldsmith, \textbf{Contact Wang}: A hot view of cold gas
+    \item[16] JWST-GO-03426, PI Jones: Confirming the population of disk galaxies at z>3
     \item[15] Keck 2023A\_U139, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
     \item[14] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
     \item[13] HST-GO-16667, PI Bradac: The Final Frontier: HST and JWST Exploration of Galaxies Across Cosmic Epochs
@@ -338,7 +345,7 @@
 
 \begin{tabular}{p{0.5\textwidth}|l}
     \textbullet~Keck OSIRIS, 16 nights & \textbullet~Keck DEIMOS, 3 nights \\
-    \textbullet~Keck MOSFIRE, 5 night & \textbullet~Keck ESI, 1 night \\
+    \textbullet~Keck MOSFIRE, 9 night & \textbullet~Keck ESI, 1 night \\
     \textbullet~Lick Observatory Shane telescope, 1 night & \textbullet~Steward Observatory Bok telescope, 6 nights \\
     \textbullet~Palomar Observatory P200 telescope, 2 nights
 \end{tabular}
@@ -349,7 +356,8 @@
 
 \begin{tabular}{l}
     \textbullet~Referee for \textit{ApJ, ApJS, PASJ}    \\
-    \textbullet~External reviewer for Large HST proposals in Cycle 29   \\
+    \textbullet~External reviewer for Large JWST proposals in Cycle 2   \\
+    \textbullet~External reviewer for Large HST proposals in Cycles 29, 30, 31   \\
     \textbullet~External reviewer for Chinese Telescope Access Program Time Allocation Committee  \\
     \textbullet~Selected participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
     \textbullet~Organizer of the \href{https://kiaa.pku.edu.cn/info/1026/5199.htm}{KIAA JWST Proposal Planning Workshop} and the \href{https://sites.google.com/view/ucla-jwst}{UCLA JWST Proposal Planning Workshop}    \\
@@ -394,29 +402,29 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-14 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2023, submitted to \textit{Nature}    \\
+14 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2023, submitted to \textit{Nature} (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [19 citations]  \\
 
-13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.}  \\
+13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [1 citation] \\
 
-12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [2 citations] \\
+12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [15 citations] \\
 
-11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [3 citations] \\
+11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [8 citations] \\
 
-10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [6 citations] \\
+10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [16 citations] \\
 
-9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [19 citations] \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [25 citations] \\
 
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [31 citations]  \\
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [39 citations]  \\
 
-7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558} {arXiv:1610.07558}) [46 citations]    \\
+7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558} {arXiv:1610.07558}) [53 citations]    \\
 
-6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) [48 citations] \\
+6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) [57 citations] \\
 
-5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [54 citations] \\
+5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [56 citations] \\
 
-4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [3 citations] \\
+4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [4 citations] \\
 
-3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol.  Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [27 citations] \\
+3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol.  Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [31 citations] \\
 
 2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci.  China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
 
