--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -176,7 +176,28 @@
     \textsc{Jun. 2024}   &   \textbf{Invited Talk}, @ \href{https://cosparhq.cnes.fr/events/cospar-capacity-building-workshops/}{COSPAR/IAU Workshop on JWST}, Chiangmai, Thailand \\
     \multicolumn{2}{c}{} \\
 
+    \textsc{Dec. 2023}   &   \textbf{Invited Seminar}, @ University of Science and Technology of China, Hefei \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2023}   &   \textbf{Invited Seminar}, @ Shanghai Astronomical Observatories, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2023}   &   \textbf{Invited Seminar}, @ Shanghai Jiao Tong University, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Apr. 2023}   &   \textbf{Invited Seminar}, @ Xiamen University, Xiamen \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Jan. 2023}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2022}   &   \textbf{Invited Seminar}, @ Nanjing University, Nanjing    \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2022}   &   \textbf{Invited Seminar}, @ Tsinghua University, Beijing   \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Oct. 2022}   &   \textbf{Invited Seminar}, @ NAOC FLAT (FAST and LAMOST Associated Scientific Colloquium), Beijing \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2022}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
@@ -402,9 +423,17 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
+18 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2023, submitted to \textit{Astrophys. J. Letters}, (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) \\
+
+17 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters} in press, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) \\
+
+16 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.}, (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) \\
+
+15 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [2 citations] \\
+
 14 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2023, submitted to \textit{Nature} (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [19 citations]  \\
 
-13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [1 citation] \\
+13 &  Wang, K., \textbf{Wang, X.}, Chen, Y. Environmental Dependence of the Mass-Metallicity Relation in Cosmological Hydrodynamical Simulations. 2023, \textit{Astrophys. J.}, 951, 66 (\href{https://arxiv.org/abs/2305.08161}{arXiv:2305.08161}) [1 citations]    \\
 
 12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [15 citations] \\
 
