--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -423,9 +423,13 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
+20 &  \textbf{Wang, X.} et al. Ultraviolet and Blue Optical Imaging of UVCANDELS. 2024, \textit{Res. Notes AAS}, 8, 26 (\href{https://iopscience.iop.org/article/10.3847/2515-5172/ad1f6f}{DOI 10.3847/2515-5172/ad1f6f})  \\
+
+19 & Shi, D., \textbf{Wang, X.} et al. The Emergence of Brightest Cluster Galaxy in the Most Massive Protocluster Core. 2023, submitted to \textit{Astrophys. J.}, (\href{https://arxiv.org/abs/2303.09726}{arXiv:2303.09726}) \\
+
 18 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2023, submitted to \textit{Astrophys. J. Letters}, (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) \\
 
-17 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters} in press, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) \\
+17 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters}, 960, L13, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) \\
 
 16 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.}, (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) \\
 
