--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -129,38 +129,42 @@
 
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+    \textsc{Aug. 2024} & ACAMAR visiting fellow, Swinburne University of Technology, Melbourne, Australia \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    \textsc{Mar. 2024} & Xiaomi Young Scholar, University of Chinese Academy of Sciences \\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2023} & Lingyan Gold Medal, University of Chinese Academy of Sciences \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Mar. 2020} & Kavli Visiting Fellow, Peking University \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2019} & UCLA Physics and Astronomy Commencement Speaker  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
-    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
+%    \multicolumn{2}{c}{} \\[\narrow]
 %    \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
 %    \multicolumn{2}{c}{} \\[\narrow]
 %    \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
 %    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2018} & UCLA Dissertation Year Fellowship (\$47k: stipend+tuition)    \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{May 2018} & Rudnick-Abelmann Fellowship, UCLA (\$2k)      \\
-    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{May 2018} & Rudnick-Abelmann Fellowship, UCLA (\$2k)      \\
+%    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Apr. 2018} & IAU grant for participating the XXXth General Assembly (\euro0.75k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Apr. 2018} & AAS International Travel Grant (\$2k)    \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
-                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
-    \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
+%    \textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
+%    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
+%    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
+%    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
+%                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
+%    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
+%    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
 \end{longtable}
 
 
@@ -173,74 +177,74 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
-    \textsc{Jun. 2024}   &   \textbf{Invited Talk}, @ \href{https://cosparhq.cnes.fr/events/cospar-capacity-building-workshops/}{COSPAR/IAU Workshop on JWST}, Chiangmai, Thailand \\
+    \textsc{Jun. 2024}   &   \textbf{Invited lecture}, @ \href{https://cosparhq.cnes.fr/events/cospar-capacity-building-workshops/}{COSPAR/IAU Workshop on JWST}, Chiangmai, Thailand \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2023}   &   \textbf{Invited Seminar}, @ University of Science and Technology of China, Hefei \\
+    \textsc{Dec. 2023}   &   \textbf{Invited seminar}, @ University of Science and Technology of China, Hefei \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2023}   &   \textbf{Invited Seminar}, @ Shanghai Astronomical Observatories, Shanghai \\
+    \textsc{Jun. 2023}   &   \textbf{Invited seminar}, @ Shanghai Astronomical Observatories, Shanghai \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2023}   &   \textbf{Invited Seminar}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{Jun. 2023}   &   \textbf{Invited seminar}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Apr. 2023}   &   \textbf{Invited Seminar}, @ Xiamen University, Xiamen \\
+    \textsc{Apr. 2023}   &   \textbf{Invited seminar}, @ Xiamen University, Xiamen \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2023}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
+    \textsc{Jan. 2023}   &   \textbf{Invited talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2022}   &   \textbf{Invited Seminar}, @ Nanjing University, Nanjing    \\
+    \textsc{Nov. 2022}   &   \textbf{Invited seminar}, @ Nanjing University, Nanjing    \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2022}   &   \textbf{Invited Seminar}, @ Tsinghua University, Beijing   \\
+    \textsc{Nov. 2022}   &   \textbf{Invited seminar}, @ Tsinghua University, Beijing   \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Oct. 2022}   &   \textbf{Invited Seminar}, @ NAOC FLAT (FAST and LAMOST Associated Scientific Colloquium), Beijing \\
+    \textsc{Oct. 2022}   &   \textbf{Invited seminar}, @ NAOC FLAT (FAST and LAMOST Associated Scientific Colloquium), Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2022}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
+    \textsc{Jun. 2022}   &   \textbf{Invited talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
     \multicolumn{2}{c}{} \\
 
 %    \textsc{Jan. 2022}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas239}{AAS 239}, Salt Lake City\\
 %    \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2021}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas237}{AAS 237}, virtual    \\
+    \textsc{Jan. 2021}   &   \textbf{Contributed talk}, @ \href{https://aas.org/meetings/aas237}{AAS 237}, virtual    \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2020}   &   \textbf{Invited Seminar}, @ Department of Physics and Astronomy, University of Missouri \\
+    \textsc{Dec. 2020}   &   \textbf{Invited seminar}, @ Department of Physics and Astronomy, University of Missouri \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Purple Mountain Observatory, Nanjing \\
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Shanghai Astronomical Observatory \\
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Astronomical Observatory \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Lunch Talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
+    \textsc{Aug. 2019}   &   \textbf{Lunch talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
     Astronomy and Astrophysics at Peking University} \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Invited Talk}, @ National Astronomical Observatories of China, Beijing \\
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Invited Talk}, @ Key Laboratory of Space Utilization, CAS \\
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ Key Laboratory of Space Utilization, CAS \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2019}   &   \textbf{Invited Talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
+    \textsc{Jun. 2019}   &   \textbf{Invited talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Feb. 2019}   &   \textbf{Contributed Talk}, @ \href{https://conferences.pa.ucla.edu/early-universe-2019/agenda.html}{Extremely Big Eyes on the Early Universe}, UCLA  \\
+    \textsc{Feb. 2019}   &   \textbf{Contributed talk}, @ \href{https://conferences.pa.ucla.edu/early-universe-2019/agenda.html}{Extremely Big Eyes on the Early Universe}, UCLA  \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2019}   &   \textbf{Dissertation Talk}, @ \href{https://aas.org/meetings/aas233}{AAS 233}, Seattle    \\
+    \textsc{Jan. 2019}   &   \textbf{Dissertation talk}, @ \href{https://aas.org/meetings/aas233}{AAS 233}, Seattle    \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Dec. 2018}   &   \href{http://www.astro.columbia.edu/event?eid=584}{\textbf{Astronomy Seminar}} @ Columbia \\
@@ -366,7 +370,7 @@
 
 \begin{tabular}{p{0.5\textwidth}|l}
     \textbullet~Keck OSIRIS, 16 nights & \textbullet~Keck DEIMOS, 3 nights \\
-    \textbullet~Keck MOSFIRE, 9 night & \textbullet~Keck ESI, 1 night \\
+    \textbullet~Keck MOSFIRE, 11 night & \textbullet~Keck ESI, 1 night \\
     \textbullet~Lick Observatory Shane telescope, 1 night & \textbullet~Steward Observatory Bok telescope, 6 nights \\
     \textbullet~Palomar Observatory P200 telescope, 2 nights
 \end{tabular}
@@ -376,7 +380,7 @@
 \section{Professional Service}
 
 \begin{tabular}{l}
-    \textbullet~Referee for \textit{ApJ, ApJS, PASJ}    \\
+    \textbullet~Referee for \textit{ApJ, ApJS, PASJ, A\&A}    \\
     \textbullet~External reviewer for Large JWST proposals in Cycle 2   \\
     \textbullet~External reviewer for Large HST proposals in Cycles 29, 30, 31   \\
     \textbullet~External reviewer for Chinese Telescope Access Program Time Allocation Committee  \\
@@ -391,11 +395,14 @@
 \section{Teaching and Mentoring}
 
 \begin{tabular}{rp{5.4in}}
-\textsc{\small 2020--Present}  & Zihao Li, graduate student at Tsinghua University, co-advising with Prof. Zheng Cai    \\
-\textsc{\small 2018--2019}  & Jessie Hirtenstein, graduate student at UC Davis, co-advising with Prof. Tucker Jones    \\
-\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, University of California, Santa Barbara \\
-\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, University of California, Santa Barbara \\
-\textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), NJU
+\textsc{\small 2022--Present}  & Xunda Sun, Hang Zhou, Yiming Yang, Qianqiao Zhou, Shengzhe Wang, Pengfei Ren, graduate students at University of Chinese Academy of Sciences  \\
+\textsc{\small 2020--Present}  & Zihao Li, graduate student at Tsinghua University, co-advised with Prof. Zheng Cai    \\
+\textsc{\small 2018--2019}  & Jessie Hirtenstein, graduate student at UC Davis, co-advised with Prof. Tucker Jones    \\
+\textsc{\small Feb.--Jun. 2024}  & Sole lecturer of \textit{Introduction to Astronomy}, a core course for 
+    astronomy majors at University of Chinese Academy of Sciences
+%\textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, University of California, Santa Barbara \\
+%\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, University of California, Santa Barbara \\
+%\textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), NJU
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -404,7 +411,7 @@
 \begin{tabular}{rp{5.4in}}
 \textsc{2015--2017}  & Demonstrator of Astronomy experiments to local K12 schools in Los Angeles    \\
 \textsc{2015--2017}  & Volunteer in the annual \textsc{Exploring Your Universe!} events, UCLA   \\
-\textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, NJU
+%\textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, NJU
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -423,19 +430,21 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-20 &  \textbf{Wang, X.} et al. Ultraviolet and Blue Optical Imaging of UVCANDELS. 2024, \textit{Res. Notes AAS}, 8, 26 (\href{https://iopscience.iop.org/article/10.3847/2515-5172/ad1f6f}{DOI 10.3847/2515-5172/ad1f6f})  \\
+21 & Ju, M., \textbf{Wang, X.} et al. MSA-3D: Metallicity Gradients in Galaxies at $z\sim1$ with JWST/NIRSpec Slit-stepping Spectroscopy. 2024, \textit{Astrophys. J. Letters}, submitted (\href{https://arxiv.org/abs/2409.01616}{arXiv:2409.01616}) \\
 
-19 & Shi, D., \textbf{Wang, X.} et al. The Emergence of Brightest Cluster Galaxy in the Most Massive Protocluster Core. 2023, submitted to \textit{Astrophys. J.}, (\href{https://arxiv.org/abs/2303.09726}{arXiv:2303.09726}) \\
+20 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2024, \textit{Astrophys. J. Letters}, 967, L42 (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [31 citations]  \\
 
-18 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2023, submitted to \textit{Astrophys. J. Letters}, (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) \\
+19 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2024, \textit{Astrophys. J.}, 972, 121 (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) \\
+
+18 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2024, \textit{Astrophys. J.}, 972, 8 (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) \\
 
 17 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters}, 960, L13, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) \\
 
-16 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.}, (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) \\
+16 & Shi, D., \textbf{Wang, X.} et al. The Emergence of Brightest Cluster Galaxy in the Most Massive Protocluster Core. 2024, \textit{Astrophys. J.}, 963, 21 (\href{https://arxiv.org/abs/2303.09726}{arXiv:2303.09726}) \\
 
-15 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [2 citations] \\
+15 &  \textbf{Wang, X.} et al. Ultraviolet and Blue Optical Imaging of UVCANDELS. 2024, \textit{Res. Notes AAS}, 8, 26 (\href{https://iopscience.iop.org/article/10.3847/2515-5172/ad1f6f}{DOI 10.3847/2515-5172/ad1f6f})  \\
 
-14 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2023, submitted to \textit{Nature} (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [19 citations]  \\
+14 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [2 citations] \\
 
 13 &  Wang, K., \textbf{Wang, X.}, Chen, Y. Environmental Dependence of the Mass-Metallicity Relation in Cosmological Hydrodynamical Simulations. 2023, \textit{Astrophys. J.}, 951, 66 (\href{https://arxiv.org/abs/2305.08161}{arXiv:2305.08161}) [1 citations]    \\
 
